@@ -1,4 +1,5 @@
 -------------------------- aqp 0.98-1 (2010-11-23) --------------------------
+* added basic demo: demo(aqp)
 * soil.slot() now computes aggregate probabilities over user-defined segments
 * re-write of weighted profile aggregation functions
   - aqp package now requires Hmisc package
